terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/external_dns_weight/deny_ignore_false/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-0
  namespace: default
  annotations:
    cloud-platform.justice.gov.uk/ignore-external-dns-weight: "false"
spec:
  rules:
  - host: ing-0.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
